# EZCompiler

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
CompilerTools/: CMakeLists.txt
CompilerTools/Highlighter/: CMakeLists.txt  colors.cpp  colors.h  highlighter.cpp  highlighter.h
CompilerTools/StringConverter/: string_converter.h
LexAnalyzer/: CMakeLists.txt  ezlex.cpp  lex_analyzer.cpp  lex_analyzer.h  lex_component.cpp  lex_component.h
SyntaxAnalyzer/: CMakeLists.txt  ezsyntax.cpp  syntax_analyzer.cpp  syntax_analyzer.h  syntax_component.h
