cmake_minimum_required (VERSION 3.0)
project(EZCompiler)

set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_COMPILER g++)
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -o2")
else()
    message(WARNING "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support.")
endif()

include_directories(CompilerTools)
include_directories(LexAnalyzer)
include_directories(SyntaxAnalyzer)
add_subdirectory(LexAnalyzer)
add_subdirectory(CompilerTools)
add_subdirectory(SyntaxAnalyzer)
